2003-06-20  James Tanis  <jtt@austin.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Avoid calling
	bk_ioh_coalesce() if there's only one buffer handed up -- and
	seize it as well.

2003-06-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_general.c (bk_general_destroy): don't free general data until
	after thread data is destroyed
	(bk_general_thread_destroy): use pthread_self() as well as getpid()
	for funstats file format

2003-06-20  James Tanis  <jtt@wonder.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Seize the data if it's
	allowed by the ioh.

	* lib/b_ioh.c: Do not free data if it has been seized by user.

2003-06-17  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_threadnode_destroy): Actually start
	destroying subsidiary B thread environment.

	* lib/b_stats.c: Allow for no-locking if requested

	* lib/b_general.c (bk_general_init): Transfer bk_stats to
	per-thread thingy

	* lib/b_fun.c (bk_fun_entry): Ditto

2003-06-17  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (IOH_COMPRESS_SUPPORT): conditionalize unused compression
	support in libbk; this isn't used, is mostly untested, and introduces
	an unnecessary dependency on -lz for *all* SysD programs
	(ioht_raw_other): writev all iov buffers for BK_IOH_WRITE_ALL

	* lib/b_pollio.c (bk_polling_io_write, bk_polling_io_read): run flags

	* lib/b_strcode.c (bk_string_str2xml, bk_encode_base64): integer
	overflow checks

2003-06-16  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fun.c (bk_fun_exit): Allow for stats tracking of functions
	which take longer than 2^32 microseconds to complete.

2003-06-12  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_close): Race condition.

	* lib/b_thread.c (struct bk_threadcomm): Try to preserve
	ITIMER_PROF so that profiling will work across threads (into one
	pool--not per-thread).

	* lib/b_stats.pl: Sort stats HTML output.  Not in a more